Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27190

InnoDB upgrade from 10.2, 10.3, 10.4 is not crash-safe

Details

    Description

      During startup, InnoDB crash recovery must write a FILE_CHECKPOINT record. However, in MDEV-12353 the redo log record format was changed. When we are upgrading from a logically empty 10.2, 10.3, or 10.4 redo log, we must not write such a record, because it is encoded differently from the MLOG_CHECKPOINT record. We must simply create a new logically empty log file and replace the old ib_logfile0 with that.

      Writing to the old log file would corrupt the log file. If the server is killed during the upgrade, we may end up with having a corrupted log file, and both the old and new version of the server may refuse to start up.

      Attachments

        Activity

          There are no comments yet on this issue.

          People

            marko Marko Mäkelä
            marko Marko Mäkelä
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.